# TemplateCpp

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
core/dynamic_lib/: CMakeLists.txt  my_library.cpp  my_library.hpp
core/my_dynamic_lib/: CMakeLists.txt
core/my_dynamic_lib/include/my_dynamic_lib/: multiplication.hpp
core/my_dynamic_lib/src/: multiplication.cpp
core/my_static_lib/: CMakeLists.txt
core/my_static_lib/include/my_static_lib/: addition.hpp
core/my_static_lib/src/: addition.cpp
ext/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/core/static_lib/: my_library.cpp  my_library.h
test/: CMakeLists.txt  my_library_test.cpp
test/my_dynamic_lib/: multiplication_test.cpp
test/my_static_lib/: addition_test.cpp
