set(SUBPROJECT_NAME ${PROJECT_NAME}MyDynamicLib)
file(GLOB_RECURSE SRC_LIST src/*.cpp src/*.hpp)
add_library(${SUBPROJECT_NAME} SHARED ${SRC_LIST})
add_library(${PROJECT_NAME}::MyDynamicLib ALIAS ${PROJECT_NAME}MyDynamicLib)
target_include_directories(${SUBPROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_include_directories(${SUBPROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
